passenger form validation

--- a/public/views/landing-new.html
+++ b/public/views/landing-new.html
@@ -53,7 +53,7 @@
         </select>
       </div>
     </fieldset>
-    <div ng-show="clicked" class="invalid"> Please fill in all fields.</div>
+    <div ng-show="clicked" class="invalid">*Please fill in all fields.</div>
     <button id="search" class = "hvr-pulse" ng-click="validateForm() && findFlights()"><i class="fa fa-search" id="searchIcon" aria-hidden="true"></i>SEARCH</button>
   </form>
 </div>
