--- a/public/css/passenger-info.css
+++ b/public/css/passenger-info.css
@@ -134,7 +134,7 @@ Form
   width: 100%;
   height: 70px;
   margin: 0 auto;
-  background: linear-gradient(50deg, #bd6772, #01426a); 
+  background: linear-gradient(50deg, #bd6772, #01426a);
   border-top-right-radius: 15px;
   border-top-left-radius: 15px;
   color: white;
@@ -188,4 +188,11 @@ Form
 
 #passport-number{
   width: 30%;
+}
+.passenger .invalid{
+  color: #4987a5;
+  font-size: 1.25em;
+  float: left;
+  position: relative;
+  clear: both;
 }
