payment form validation

--- a/public/css/payment.css
+++ b/public/css/payment.css
@@ -15,7 +15,7 @@ Checkout
   border-radius: 15px;
   padding: 160px 45px 30px;
   box-shadow: 0 10px 40px rgba(0, 0, 0, 0.1);
-  height: 650px;
+  height: 680px;
 }
 
 /*--------------------
@@ -293,4 +293,10 @@ Credit Card
 }
 #select-type {
   width:20%;
+}
+.checkout .invalid{
+  color: #4987a5;
+  font-size: 1.25em;
+  position: relative;
+  clear: both;
 }
