datepicker working,but both are present as references

--- a/www/partials/findBookingSearch.html
+++ b/www/partials/findBookingSearch.html
@@ -6,7 +6,7 @@
                 <span class="input-label">Booking Ref.</span>
                 <input type="text" placeholder="">
             </label>
-            <button id="findBookingSearch-button4" style="font-weight:500;" class="button button-calm  button-block icon ion-ios-pricetag">Find booking</button>
+            <button id="findBookingSearch-button4" style="font-weight:500;" class="button button-calm  button-block icon ion-ios-search-strong">Find booking</button>
         </form>
     </ion-content>
 </ion-view>
