--- a/www/partials/flightStatusSearch.html
+++ b/www/partials/flightStatusSearch.html
@@ -6,7 +6,7 @@
                 <span class="input-label">Flight Number</span>
                 <input type="text" placeholder="">
             </label>
-            <button id="flightStatusSearch-button5" style="font-weight:500;" class="button button-calm  button-block icon ion-android-plane">Find Flight Status</button>
+            <button id="flightStatusSearch-button5" style="font-weight:500;" class="button button-calm  button-block icon ion-ios-search-strong">Find Flight Status</button>
         </form>
     </ion-content>
 </ion-view>
