--- a/www/partials/findFlights.html
+++ b/www/partials/findFlights.html
@@ -9,13 +9,24 @@
 
             <label class="item item-input">
                 <span class="input-label">From</span>
-                <input type="text"  id="origin" name="origin" placeholder="Select origin" ng-model="$parent.origin" ionic-autocomplet="airport.iata as airport.iata for airport in airports| filter:{'iata':$viewValue} | filter:notNull | limitTo:5">
+                <input type="text"  id="origin" name="origin" placeholder="Select origin" ng-model="$parent.origin" ionic-autocomplete="airport.iata as airport.iata for airport in airports| filter:{'iata':$viewValue} | filter:notNull | limitTo:5">
             </label>
 
             <label class="item item-input">
                 <span class="input-label">To</span>
-                <input type="text" id="destination" name="destination" placeholder="Select destination"  ng-model="$parent.destination" ionic-autocomplet="airport.iata as airport.iata for airport in airports | filter:{'iata':$viewValue} | filter:notNull | limitTo:5">
+                <input type="text" id="destination" name="destination" placeholder="Select destination"  ng-model="$parent.destination" ionic-autocomplete="airport.iata as airport.iata for airport in airports | filter:{'iata':$viewValue} | filter:notNull | limitTo:5">
             </label>
+            <onezone-datepicker datepicker-object="onezoneDatepickerOutgoing ">
+                <button class="button button-block button-outline button-positive show-onezone-datepicker" name="start" >
+                    Depart: {{onezoneDatepickerOutgoing.date | date:'dd MMMM yyyy'}} 
+                </button>
+            </onezone-datepicker>
+            <onezone-datepicker datepicker-object="onezoneDatepickerReturn" ng-hide="oneWay">
+                <button class="button button-block button-outline button-positive show-onezone-datepicker" name="start" >
+                    Depart: {{onezoneDatepickerReturn.date | date:'dd MMMM yyyy'}} 
+                </button>
+            </onezone-datepicker>
+
 
             <label class="item item-input">
                 <span class="input-label">Depart Date</span>
