--- a/www/partials/flights.html
+++ b/www/partials/flights.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Flights" >
+<ion-view view-title="Flights">
   <ion-content>
   	<h3>Outgoing Flights</h3>
   	<ion-list>
@@ -15,17 +15,23 @@
 					 {{outgoingFlight.cost}} {{outgoingFlight.currency}}
 					</div>
 				</div>
-			</div>
-			<div class="item item-text-wrap row">
+				<div class="row">
+					<label >
 				{{outgoingFlight.departureDateTime | date :  "shortTime"}}   ->   {{outgoingFlight.arrivalDateTime | date :  "shortTime"}}
+					</label>
+				</div>
+				<div class="row">
+					<label>
+						Aircraft: {{outgoingFlight.aircraftType}} {{outgoingFlight.aircraftModel}}
+					</label>
+					<label ng-show="otherAirlines===1">
+						Airline: {{outgoingFlight.Airline}} Airlines
+					</label>
+				</div>
 			</div>
 
-			<div class="item item-text-wrap">
-				Aircraft: {{outgoingFlight.aircraftType}} {{outgoingFlight.aircraftModel}}
-			</div>
-			<div class="item item-text-wrap" ng-show="otherAirlines===1">
-				Airline: {{outgoingFlight.Airline}} Airlines
-			</div>
+
+
 			<ion-radio class="col" name="selectedOutgoing" ng-model="$parent.selectedOutgoing.index" ng-value="{{$index}}" style="background: #2580C9">Add to Cart</ion-radio>
 		</div>
 	</ion-list>
@@ -34,34 +40,37 @@
 
 	<ion-list ng-hide="oneWay">
 		<div class="card" ng-repeat="returnFlight in returnFlights">
-			<div class="item item-divider col">
+		<div class="item item-divider col">
 					Flight Number: {{returnFlight.flightNumber}}
 			</div>
 			<div class="item item-text-wrap">
 				<div class="row">
 					<div class="col col-50">
-						{{returnFlight.seatClass}}
+						Class: {{seatClass}}
 					</div>
 					<div class="col col-50">
 					 {{returnFlight.cost}} {{returnFlight.currency}}
 					</div>
 				</div>
-			</div>
-			<div class="item item-text-wrap row">
+				<div class="row">
+					<label >
 				{{returnFlight.departureDateTime | date :  "shortTime"}}   ->   {{returnFlight.arrivalDateTime | date :  "shortTime"}}
-			</div>
-
-			<div class="item item-text-wrap">
-				Aircraft: {{returnFlight.aircraftType}} {{returnFlight.aircraftModel}}
-			</div>
-			<div class="item item-text-wrap" ng-show="otherAirlines===1">
-				{{returnFlight.Airline}}
+					</label>
+				</div>
+				<div class="row">
+					<label>
+						Aircraft: {{returnFlight.aircraftType}} {{returnFlight.aircraftModel}}
+					</label>
+					<label ng-show="otherAirlines===1">
+						Airline: {{returnFlight.Airline}} Airlines
+					</label>
+				</div>
 			</div>
 			<ion-radio class="col " name="selectedReturn" ng-model="$parent.selectedReturn.index" ng-value="{{$index}}" style="background: #2580C9">Add to Cart</ion-radio>
 		</div>
 	</ion-list>
 
-	  <ion-item  style="border-radius:-1px -1px -1px -1px;" class="button button-calm  button-block" type="button" ng-click="Continue()">Find Flights</ion-item>
+	  <ion-item  style="border-radius:-1px -1px -1px -1px;" class="button button-calm  button-block" type="button" ng-click="Continue()">Continue</ion-item>
 
   </ion-content>
 </ion-view>
