--- a/public/views/booking.html
+++ b/public/views/booking.html
@@ -76,7 +76,7 @@
         </div>
       </div>
 
-      <div class="payment">
+      <!-- <div class="payment">
         <div id="card-container">
           <div class="card" id="card">
             <div class="front">
@@ -88,7 +88,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
